--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Hello World!!!</h1>
+    <h1>Text Section Second</h1>
+    <div class="wrapper">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aliquid perferendis impedit incidunt hic recusandae illum dolores sapiente adipisci, autem natus porro ea eveniet, corporis illo facere nostrum! Cumque, accusantium.
+    </div>
 </body>
 </html>
